# PlantDaddy-Backend

./: .flake8  .gitignore  README.md  pyproject.toml
app/: console.py
app/api/: dependencies.py
app/api/v1/: console.py  dependencies.py
app/api/v1/endpoints/: plant.py
app/db/: connector.py
app/models/: enums.py  plant.py
