[tool.poetry]
name = "plantdaddybackend"
version = "0.1.0"
description = "api for plantdaddy web app"
authors = ["Ethan Cloin <dev.ethancloin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.82.0"
sqlmodel = "^0.0.8"
uvicorn = "^0.18.3"
python-dotenv = "^0.21.0"
httpx = "^0.23.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
black = "^22.8.0"
flake8 = "^5.0.4"
flake8-black = "^0.3.3"
flake8-import-order = "^0.18.1"
mypy = "^0.971"
isort = "^5.10.1"
flake8-isort = "^4.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
